--- a/ag-equipment.html
+++ b/ag-equipment.html
@@ -255,7 +255,7 @@
 
 											<p class="product__price">29 000 ₴</p>
 										</div>
-										<a href="card1.html" class="product__link"></a>
+										<a href="../kovsh/card1.html" class="product__link"></a>
 								</article>
 							</div>
 							<div class="swiper-slide">
