--- a/kovsh/card1.html
+++ b/kovsh/card1.html
@@ -139,7 +139,7 @@
 				<div class="menu__container">
 					<button class="burger-btn"><span></span></button>
 					<h1 class="menu__title">
-						<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
+						<a class="menu__link-logo" href="../index.html"><img class="menu__logo" src=" ../img/logo.png" alt="" /></a>
 					</h1>
 					<div class="header__lang nav__list-social">
 						<button class="header__btn" data-btn="ua">UA</button>
@@ -153,30 +153,30 @@
 						<ul class="nav__list">
 
 							<li class="nav__item">
-								<a href="about-us.html" class="link-hover" data-lang="nav_page-2"></a>
+								<a href="../about-us.html" class="link-hover" data-lang="nav_page-2"></a>
 							</li>
 							<li class="nav__item">
-								<a href="contacts.html" class="link-hover" data-lang="nav_page-3"></a>
+								<a href="../contacts.html" class="link-hover" data-lang="nav_page-3"></a>
 							</li>
 							<li class="nav__item">
-								<a href="product.html" class="link--active nav__item-link" data-lang="nav_page-4"></a>
+								<a href="../product.html" class="link--active nav__item-link" data-lang="nav_page-4"></a>
 								<div class="dropdown dropdown--bcg">
-									<a href="ag-equipment.html" class="link__dropdown link-hover" data-lang="nav_page-5"></a>
-									<a href="furniture-elements.html" class="link__dropdown link-hover" data-lang="nav_page-6"></a>
-									<a href="decor-elements.html" class="link__dropdown link-hover" data-lang="nav_page-7"></a>
-									<a href="сustom-orders.html" class="link__dropdown link-hover" data-lang="nav_page-8"></a>
+									<a href="../ag-equipment.html" class="link__dropdown link-hover" data-lang="nav_page-5"></a>
+									<a href="../furniture-elements.html" class="link__dropdown link-hover" data-lang="nav_page-6"></a>
+									<a href="../decor-elements.html" class="link__dropdown link-hover" data-lang="nav_page-7"></a>
+									<a href="../сustom-orders.html" class="link__dropdown link-hover" data-lang="nav_page-8"></a>
 
 								</div>
 							</li>
 							<li class="nav__item">
-								<a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
+								<a href="../services.html" class="link-hover" data-lang="nav_page-1"></a>
 								<div class="dropdown dropdown--width dropdown--bcg">
-									<a href="lazer.html" class="link__dropdown link-hover " data-lang="footer_page-6-1"></a>
-									<a href="sheet-bending.html" class="link__dropdown link-hover" data-lang="footer_page-7-1"></a>
-									<a href="dyeing.html" class="link__dropdown link-hover" data-lang="footer_page-8-1"></a>
-									<a href="welding.html" class="link__dropdown link-hover" data-lang="footer_page-9-1"></a>
-									<a href="locksmith.html" class="link__dropdown link-hover" data-lang="footer_page-10-1"></a>
-									<a href="mechanical-processing.html" class="link__dropdown link-hover"
+									<a href="../lazer.html" class="link__dropdown link-hover " data-lang="footer_page-6-1"></a>
+									<a href="../sheet-bending.html" class="link__dropdown link-hover" data-lang="footer_page-7-1"></a>
+									<a href="../dyeing.html" class="link__dropdown link-hover" data-lang="footer_page-8-1"></a>
+									<a href="../welding.html" class="link__dropdown link-hover" data-lang="footer_page-9-1"></a>
+									<a href="../locksmith.html" class="link__dropdown link-hover" data-lang="footer_page-10-1"></a>
+									<a href="../mechanical-processing.html" class="link__dropdown link-hover"
 										data-lang="footer_page-11-1"></a>
 								</div>
 							</li>
@@ -230,18 +230,18 @@
 		<div class="container">
 			<div class="breadcrumbs">
 				<ul class="breadcrumbs__list">
-					<li class="breadcrumbs__item"><a href="product.html">Продукти</a></li>
-					<li class="breadcrumbs__item"><a href="ag-equipment.html">СГ обладнання</a></li>
-					<li class="breadcrumbs__item"><a href="front-loaders.html">Фронтальні навантажувачі</a>
+					<li class="breadcrumbs__item"><a href="../product.html">Продукти</a></li>
+					<li class="breadcrumbs__item"><a href="../ag-equipment.html">СГ обладнання</a></li>
+					<li class="breadcrumbs__item"><a href="../front-loaders.html">Фронтальні навантажувачі</a>
 					<li class="breadcrumbs__item"><span>Гак для біг бегі</span>
 					</li>
 				</ul>
 			</div>
 		</div>
 		<div class="card__bkg-container">
-			<div class="card__bkg"></div>
-			<div class="container--margin-top">
 
+			<div class="container--margin-top">
+				<div class="card__bkg"></div>
 				<section class="card">
 					<div class="container card__container">
 						<div class="card-top">
@@ -260,27 +260,27 @@
 								<div class="swiper-wrapper">
 									<div class="swiper-slide">
 										<div class="swiper-zoom-container">
-											<img src="img/cards/gak-big-beg/gak-big-beg-1.png" />
+											<img src="../img/cards/gak-big-beg/gak-big-beg-1.png" />
 										</div>
 									</div>
 									<div class="swiper-slide">
 										<div class="swiper-zoom-container">
-											<img src="img/cards/gak-big-beg/gak-big-beg-2.png" />
+											<img src="../img/cards/gak-big-beg/gak-big-beg-2.png" />
 										</div>
 									</div>
 									<div class="swiper-slide">
 										<div class="swiper-zoom-container">
-											<img src="img/cards/gak-big-beg/gak-big-beg-3.png" />
+											<img src="../img/cards/gak-big-beg/gak-big-beg-3.png" />
 										</div>
 									</div>
 									<div class="swiper-slide">
 										<div class="swiper-zoom-container">
-											<img src="img/cards/gak-big-beg/gak-big-beg-4.png" />
+											<img src="../img/cards/gak-big-beg/gak-big-beg-4.png" />
 										</div>
 									</div>
 									<div class="swiper-slide">
 										<div class="swiper-zoom-container">
-											<img src="img/cards/gak-big-beg/gak-big-beg-5.png" />
+											<img src="../img/cards/gak-big-beg/gak-big-beg-5.png" />
 										</div>
 									</div>
 
@@ -289,19 +289,19 @@
 							<div thumbsSlider="" class="swiper mySwiper">
 								<div class="swiper-wrapper">
 									<div class="swiper-slide">
-										<img class="card__img" src="img/cards/gak-big-beg/gak-big-beg-1.png" />
+										<img class="card__img" src="../img/cards/gak-big-beg/gak-big-beg-1.png" />
 									</div>
 									<div class="swiper-slide">
-										<img class="card__img" src="img/cards/gak-big-beg/gak-big-beg-2.png" />
+										<img class="card__img" src="../img/cards/gak-big-beg/gak-big-beg-2.png" />
 									</div>
 									<div class="swiper-slide">
-										<img class="card__img" src="img/cards/gak-big-beg/gak-big-beg-3.png" />
+										<img class="card__img" src="../img/cards/gak-big-beg/gak-big-beg-3.png" />
 									</div>
 									<div class="swiper-slide">
-										<img class="card__img" src="img/cards/gak-big-beg/gak-big-beg-4.png" />
+										<img class="card__img" src="../img/cards/gak-big-beg/gak-big-beg-4.png" />
 									</div>
 									<div class="swiper-slide">
-										<img class="card__img" src="img/cards/gak-big-beg/gak-big-beg-5.png" />
+										<img class="card__img" src="../img/cards/gak-big-beg/gak-big-beg-5.png" />
 									</div>
 								</div>
 
@@ -334,6 +334,14 @@
 											<th>Основна сталь:</th>
 											<td>S355 </td>
 										</tr>
+										<tr>
+											<th>Зачеп:</th>
+											<td>JCB \ Manitou</td>
+										</tr>
+										<tr>
+											<th>:</th>
+											<td>S355 </td>
+										</tr>
 									</tbody>
 								</table>
 							</div>
@@ -347,6 +355,7 @@
 					</div>
 				</section>
 				<div class="container">
+					<h3 class="section__title">Опис:</h3>
 					<p class="section__text section--center-text section__text--black">
 						Захват для біг-бегів — це спеціалізоване навісне обладнання, яке призначене для навантажувачів JCB, Manitou
 						та
@@ -370,13 +379,13 @@
 						<h5 class="info__title" data-lang="footer_page-1"></h5>
 						<ul>
 							<li class="info__item">
-								<a class="info__link" href="services.html" data-lang="footer_page-2"></a>
+								<a class="info__link" href="../services.html" data-lang="footer_page-2"></a>
 							</li>
 							<li class="info__item">
-								<a class="info__link" href="about-us.html" data-lang="footer_page-3"></a>
+								<a class="info__link" href="../about-us.html" data-lang="footer_page-3"></a>
 							</li>
 							<li class="info__item">
-								<a class="info__link" href="contacts.html" data-lang="footer_page-4"></a>
+								<a class="info__link" href="../contacts.html" data-lang="footer_page-4"></a>
 							</li>
 
 						</ul>
@@ -385,19 +394,19 @@
 						<h5 class="info__title" data-lang="footer_page-5"></h5>
 						<ul class="info__list">
 							<li class="info__item">
-								<a href="lazer.html" class="info__link" data-lang="footer_page-6"></a>
+								<a href="../lazer.html" class="info__link" data-lang="footer_page-6"></a>
 							</li>
 							<li class="info__item">
-								<a href="sheet-bending.html" class="info__link" data-lang="footer_page-7"></a>
+								<a href="../sheet-bending.html" class="info__link" data-lang="footer_page-7"></a>
 							</li>
 							<li class="info__item">
-								<a href="dyeing.html" class="info__link" data-lang="footer_page-8"></a>
+								<a href="../dyeing.html" class="info__link" data-lang="footer_page-8"></a>
 							</li>
 							<li class="info__item">
-								<a href="welding.html" class="info__link" data-lang="footer_page-9"></a>
+								<a href="../welding.html" class="info__link" data-lang="footer_page-9"></a>
 							</li>
 							<li class="info__item">
-								<a href="locksmith.html" class="info__link" data-lang="footer_page-10"></a>
+								<a href="../locksmith.html" class="info__link" data-lang="footer_page-10"></a>
 							</li>
 						</ul>
 					</div>
@@ -481,17 +490,17 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/lang.js"></script>
+	<script src="../js/lang.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-	<script src="js/index.js"></script>
+	<script src="../js/index.js"></script>
 
-	<script src="js/swiper.js"></script>
+	<script src="../js/swiper.js"></script>
 
-	<script src="js/fslightbox.js"></script>
+	<script src="../js/fslightbox.js"></script>
 
 	<script src="https://kit.fontawesome.com/fce9a50d02.js" crossorigin="anonymous"></script>
-	<script src="js/app.js"></script>
+	<script src="../js/app.js"></script>
 </body>
 
 </html>
