--- a/kovsh/card1.html
+++ b/kovsh/card1.html
@@ -327,7 +327,7 @@
 											<td>1029 мм</td>
 										</tr>
 										<tr>
-											<th>Вага:</th>
+											<th>Вагa:</th>
 											<td>176 кг</td>
 										</tr>
 										<tr>
