--- a/lazer.html
+++ b/lazer.html
@@ -315,7 +315,8 @@
 					</div>
 					<ul class="nav__social-list--desktop nav__social-list--svg">
 						<li class="nav__social-item">
-							<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+							<a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+								rel="noopener noreferrer">
 								<svg class="link-social--svg" width="25" height="25">
 									<use xlink:href="#facebook"></use>
 								</svg>
@@ -323,7 +324,7 @@
 						</li>
 						<li class="nav__social-item">
 							<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-								class="link-social link--hover">
+								class="link-social link--hover" target="_blank" rel="noopener noreferrer">
 								<svg class="link-social--svg" width="25" height="25">
 									<use xlink:href="#location"></use>
 								</svg>
@@ -404,7 +405,8 @@
 								</a>
 							</li>
 							<li class="nav__item-social">
-								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+									rel="noopener noreferrer">
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#facebook"></use>
 									</svg>
@@ -714,7 +716,7 @@
 						<ul class="info__list">
 							<li class="info__item">
 								<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-									class="link-social link--hover" data-lang="footer_page-12">
+									class="link-social link--hover" data-lang="footer_page-12" target="_blank" rel="noopener noreferrer">
 
 								</a>
 								<svg class="link-social--svg" width="30" height="30">
@@ -759,7 +761,8 @@
 								</a>
 							</li>
 							<li class="info__item">
-								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+									rel="noopener noreferrer">
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#facebook"></use>
 									</svg>
