--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;700&display=swap"
     rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <link rel="website icon" type="png" href="https://github.com/dmytrostychuk/Armax/blob/master/src/img/pngegg.png?raw=true/>
@@ -122,13 +122,14 @@
 
         <div class="nav__container">
           <div class="header__lang">
-            <button class="header__btn" data-btn="ua">UA</button>
+            <button class="header__btn " data-btn="ua">UA</button>
             <button class="header__btn" data-btn="en">EN</button>
             <button class="header__btn" data-btn="de">DE</button>
           </div>
           <ul class="nav__social-list--desktop nav__social-list--svg">
             <li class="nav__social-item">
-              <a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+              <a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+                rel="noopener noreferrer">
                 <svg class="link-social--svg" width="25" height="25">
                   <use xlink:href="#facebook"></use>
                 </svg>
@@ -136,7 +137,7 @@
             </li>
             <li class="nav__social-item">
               <a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-                class="link-social link--hover">
+                class="link-social link--hover" target="_blank" rel="noopener noreferrer">
                 <svg class="link-social--svg" width="25" height="25">
                   <use xlink:href="#location"></use>
                 </svg>
@@ -155,9 +156,9 @@
 
         <div class="menu__container">
           <button class="burger-btn"><span></span></button>
-          <h1 class="menu__title">
+          <h3 class="menu__title">
             <a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
-          </h1>
+          </h3>
           <div class="header__lang nav__list-social">
             <button class="header__btn" data-btn="ua">UA</button>
             <button class="header__btn" data-btn="en">EN</button>
@@ -175,7 +176,9 @@
               <li class="nav__item">
                 <a href="contacts.html" class="link-hover" data-lang="nav_page-3"></a>
               </li>
-
+              <li class="nav__item">
+                <a href="news.html" class="link-hover" data-lang="nav_page-9"></a>
+              </li>
 
               <li class="nav__item">
                 <a href="product.html" class="link-hover nav__item-link" data-lang="nav_page-4"></a>
@@ -199,6 +202,7 @@
                     data-lang="footer_page-11-1"></a>
                 </div>
               </li>
+
             </ul>
 
             <ul class="nav__list nav__list-social">
@@ -219,7 +223,8 @@
                 </a>
               </li>
               <li class="nav__item-social">
-                <a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+                <a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+                  rel="noopener noreferrer">
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#facebook"></use>
                   </svg>
@@ -228,7 +233,7 @@
               </li>
               <li class="nav__item-social">
                 <a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
-                  class="link-social link--hover">
+                  class="link-social link--hover" target="_blank" rel="noopener noreferrer">
                   <svg class="link-social--svg" width="30" height="30">
                     <use xlink:href="#location"></use>
                   </svg>
@@ -297,7 +302,7 @@
         <article class="services__card" data-aos="fade-up">
           <figure class="services__content">
             <picture>
-              <img class="services__img" src="img/sheet-bending.jpg" alt="sheet-bending" width="300" height="200" />
+              <img class="services__img" src="img/sheet-bending.webp" alt="sheet-bending" width="300" height="200" />
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
@@ -318,7 +323,7 @@
         <article class="services__card" data-aos="fade-up">
           <figure class="services__content">
             <picture>
-              <img class="services__img" src="img/powder-painting.jpg" alt="dyeing working" width="300" height="200" />
+              <img class="services__img" src="img/powder-painting.webp" alt="dyeing working" width="300" height="200" />
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
@@ -480,9 +485,10 @@
 
     <section class="news">
       <div class="container">
-        <h3 class="section__title" data-lang="news-1"></h3>
+        <h3 class="section__title"><a href="news.html" class="section__title section__title--hover"
+            data-lang="news-1"></a></h3>
         <div class="news__container">
-          <div class="news__blok">
+          <div class="news__blok ">
             <div class="news__img">
               <img src="img/news/lazer-cuting-bodor.jpg" alt="new ceh">
             </div>
@@ -527,7 +533,7 @@
             </div>
 
           </div>
-          <div class="news__blok">
+          <!-- <div class="news__blok">
             <div class="news__img">
               <img src="img/news/lazer-cuting-pipe.jpg" alt="new ceh">
             </div>
@@ -613,7 +619,7 @@
               </div>
             </div>
 
-          </div>
+          </div> -->
           <!-- <div class="news__blok">
             <div class="news__img">
               <img src="img/news/welding-work.jpg" alt="">
@@ -641,44 +647,6 @@
       </div>
     </section>
 
-
-
-    <!-- <section class="section partners">
-      <div class="container">
-        <div>
-          <h3 class="section__title" data-lang="partners_page-1"></h3>
-          <p class="section__text section--center-text" data-lang="partners_page-2"></p>
-        </div>
-        <div class="partners__slider">
-          <div class="swiper swiper__partners">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="img/skf-logo.svg" alt="skf" width="190" height="150" />
-              </div>
-              <div class="swiper-slide">
-                <img src="img/ua-bruk.png" alt="ua-bruk" width="190" height="34" />
-              </div>
-              <div class="swiper-slide">
-                <img src="img/cvg-logo.png" alt="cvg" width="190" height="190" />
-              </div>
-              <div class="swiper-slide">
-                <img src="img/globino-logo.png" alt="globino" width="190" height="180" />
-              </div>
-              <div class="swiper-slide">
-                <img src="img/limo-logo.png" alt="limo" width="190" height="180" />
-              </div>
-            </div>
-          </div>
-          <div class="swiper-button-prev">
-            <img src="img/arow-prev.svg" alt="prev" width="30" height="50" />
-          </div>
-          <div class="swiper-button-next">
-            <img src="img/arow-next.svg" alt="next" width="30" height="50" />
-          </div>
-        </div>
-      </div>
-      <div class="partners__background"></div>
-    </section> -->
     <section class="calculation">
       <div class="calculation__background"></div>
       <div class="calculation__inner">
@@ -774,7 +742,7 @@
             <ul class="info__list">
               <li class="info__item">
                 <a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-                  class="link-social link--hover" data-lang="footer_page-12">
+                  class="link-social link--hover" data-lang="footer_page-12" target="_blank" rel="noopener noreferrer">
 
                 </a>
                 <svg class="link-social--svg" width="30" height="30">
@@ -819,7 +787,8 @@
                 </a>
               </li>
               <li class="info__item">
-                <a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+                <a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+                  rel="noopener noreferrer">
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#facebook"></use>
                   </svg>
@@ -833,15 +802,10 @@
     </div>
   </footer>
   <script src="js/lang.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="js/index.js"></script>
   <script src="js/form-calculation.js"></script>
-  <script src="js/swiper.js"></script>
-
-  <script src="js/fslightbox.js"></script>
-
-  <script src="https://kit.fontawesome.com/fce9a50d02.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script src="js/app.js"></script>
 </body>
 
